# CS-485-PA2

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  PA2.tex  README.md
src/: compress.cpp  toon.cpp  trees.cpp
